<ul>s no longer overflow page container

--- a/assets/_docs.scss
+++ b/assets/_docs.scss
@@ -98,6 +98,7 @@ table {
     border: 0;
   }
   p,
+  ul,
   hr,
   h1,
   h2,
